Hero API works. Trying to add drop down instead of text field

--- a/index.html
+++ b/index.html
@@ -14,8 +14,38 @@
     <title>Project 1</title>
   </head>
   <body>
-    <h1>This is my Project 1</h1>
-    <p>Hi</p>
-    <p>Hello</p>
+    <main>
+      <h1>Super Hero API</h1>
+      <h3 id="heroName">Name:</h3>
+      <h3 id="heroID">Id:</h3>
+      <h3>
+        Powerstats:
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+      </h3>
+      <h3>Bio:</h3>
+      <h3>Appearance:</h3>
+      <h3>Connections:</h3>
+      <img src="" alt="" />
+    </main>
+    <aside>
+      <!-- <form>
+        <input type="text" placeholder="Super Being" />
+        <input type="submit" value="Get Super Being" />
+      </form> -->
+      <select id="herosDropDown">
+        <option value="">- Please choose -</option>
+        <option value="644">Superman</option>
+        <option value="70">Batman</option>
+        <option value="620">Spider-Man</option>
+        <option value="589">She-Hulk</option>
+        <option value="470">Moon Knight</option>
+        <option value="481">Namor</option>
+      </select>
+    </aside>
   </body>
 </html>
