added more options to drop down and messing with desktop and mobile structures

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="app.js" defer></script>
+    <link rel="stylesheet" href="mobileStyle.css" />
     <link rel="stylesheet" href="styles.css" />
     <title>Project 1</title>
   </head>
@@ -123,160 +124,158 @@
           <option value="43">Ares</option>
           <option value="44">Ariel</option>
           <option value="45">Armor</option>
-          <option value="46">Arsenal</option>
-          <option value="47">Astro Boy</option>
           <option value="48">Atlas</option>
           <option value="49">Atlas</option>
-          <option value="50">Atom</option>
-          <!-- <option value="51">Atom</option>
-        <option value="52">Atom Girl</option>
-        <option value="53">Atom II</option>
-        <option value="54">Atom III</option>
-        <option value="55">Atom IV</option>
-        <option value="56">Aurora</option>
-        <option value="57">Azazel</option>
-        <option value="58">Azrael</option>
-        <option value="59">Aztar</option>
-        <option value="60">Bane</option>
-        <option value="61">Banshee</option>
-        <option value="62">Bantam</option>
-        <option value="63">Batgirl</option>
-        <option value="64">Batgirl</option>
-        <option value="65">Batgirl III</option>
-        <option value="66">Batgirl IV</option>
-        <option value="67">Batgirl V</option>
-        <option value="68">Batgirl VI</option>
-        <option value="69">Batman</option>
-        <option value="70">Batman</option>
-        <option value="71">Batman II</option>
-        <option value="72">Battlestar</option>
-        <option value="73">Batwoman V</option>
-        <option value="74">Beak</option>
-        <option value="75">Beast</option>
-        <option value="76">Beast Boy</option>
-        <option value="77">Beetle</option>
-        <option value="78">Ben 10</option>
-        <option value="79">Beta Ray Bill</option>
-        <option value="80">Beyonder</option>
-        <option value="81">Big Barda</option>
-        <option value="82">Big Daddy</option>
-        <option value="83">Big Man</option>
-        <option value="84">Bill Harken</option>
-        <option value="85">Billy Kincaid</option>
-        <option value="86">Binary</option>
-        <option value="89">Bird-Man</option>
-        <option value="90">Bird-Man II</option>
-        <option value="91">Birdman</option>
-        <option value="92">Bishop</option>
-        <option value="93">Bizarro</option>
-        <option value="94">Black Abbott</option>
-        <option value="95">Black Adam</option>
-        <option value="96">Black Bolt</option>
-        <option value="97">Black Canary</option>
-        <option value="98">Black Canary</option>
-        <option value="99">Black Cat</option>
-        <option value="100">Black Fash</option>
-        <option value="101">Black Goliath</option>
-        <option value="102">Black Knight III</option>
-        <option value="103">Black Lightning</option>
-        <option value="104">Black Mamba</option>
-        <option value="105">Black Manta</option>
-        <option value="106">Black Panther</option>
-        <option value="107">Black Widow</option>
-        <option value="108">Black Widow II</option>
-        <option value="109">Blackout</option>
-        <option value="110">Blackwing</option>
-        <option value="111">Blackwulf</option>
-        <option value="112">Blade</option>
-        <option value="113">Blaquesmith</option>
-        <option value="114">Bling!</option>
-        <option value="115">Blink</option>
-        <option value="116">Blizzard</option>
-        <option value="117">Blizzard</option>
-        <option value="118">Blizzard II</option>
-        <option value="119">Blob</option>
-        <option value="120">Bloodaxe</option>
-        <option value="121">Bloodhawk</option>
-        <option value="122">Bloodwraith</option>
-        <option value="123">Blue Beetle</option>
-        <option value="124">Blue Beetle</option>
-        <option value="125">Blue Beetle II</option>
-        <option value="126">Blue Beetle III</option>
-        <option value="127">Boba Fett</option>
-        <option value="129">Bomb Queen</option>
-        <option value="130"></option>
-        <option value="131"></option>
-        <option value="132"></option>
-        <option value="133"></option>
-        <option value="134"></option>
-        <option value="135"></option>
-        <option value="136"></option>
-        <option value="137"></option>
-        <option value="138"></option>
-        <option value="139"></option>
-        <option value="140"></option>
-        <option value="141"></option>
-        <option value="142"></option>
-        <option value="143"></option>
-        <option value="144"></option>
-        <option value="145"></option>
-        <option value="146"></option>
-        <option value="147"></option>
-        <option value="148"></option>
-        <option value="149"></option>
-        <option value="150"></option>
-        <option value="151"></option>
-        <option value="152">Black Fash</option>
-        <option value="153">Black Goliath</option>
-        <option value="154"></option>
-        <option value="155"></option>
-        <option value="156"></option>
-        <option value="157"></option>
-        <option value="158"></option>
-        <option value="159"></option>
-        <option value="160"></option>
-        <option value="161"></option>
-        <option value="162"></option>
-        <option value="163"></option>
-        <option value="164"></option>
-        <option value="165"></option>
-        <option value="166"></option>
-        <option value="167"></option>
-        <option value="168"></option>
-        <option value="169"></option>
-        <option value="170"></option>
-        <option value="171"></option>
-        <option value="172"></option>
-        <option value="173"></option>
-        <option value="174"></option>
-        <option value="175"></option>
-        <option value="176"></option>
-        <option value="177"></option>
-        <option value="178"></option>
-        <option value="179"></option>
-        <option value="180"></option>
-        <option value="181"></option>
-        <option value="182"></option>
-        <option value="183"></option>
-        <option value="184"></option>
-        <option value="185"></option>
-        <option value="186"></option>
-        <option value="187"></option>
-        <option value="188"></option>
-        <option value="189"></option>
-        <option value="190"></option>
-        <option value="191"></option>
-        <option value="192"></option>
-        <option value="193"></option>
-        <option value="194"></option>
-        <option value="195"></option>
-        <option value="196"></option>
-        <option value="197"></option>
-        <option value="198"></option>
-        <option value="199"></option>
-        <option value="200"></option> -->
-
-          <option value="644">Superman</option>
+          <option value="52">Atom Girl</option>
+          <option value="53">Atom II</option>
+          <option value="56">Aurora</option>
+          <option value="57">Azazel</option>
+          <option value="58">Azrael</option>
+          <option value="60">Bane</option>
+          <option value="61">Banshee</option>
+          <option value="62">Bantam</option>
+          <option value="63">Batgirl</option>
+          <option value="66">Batgirl IV</option>
+          <option value="68">Batgirl VI</option>
+          <option value="69">Batman</option>
+          <option value="70">Batman</option>
+          <option value="71">Batman II</option>
+          <option value="72">Battlestar</option>
+          <option value="73">Batwoman V</option>
+          <option value="75">Beast</option>
+          <option value="76">Beast Boy</option>
+          <option value="78">Ben 10</option>
+          <option value="79">Beta Ray Bill</option>
+          <option value="80">Beyonder</option>
+          <option value="81">Big Barda</option>
+          <option value="82">Big Daddy</option>
+          <option value="83">Big Man</option>
+          <option value="84">Bill Harken</option>
+          <option value="92">Bishop</option>
+          <option value="93">Bizarro</option>
+          <option value="95">Black Adam</option>
+          <option value="96">Black Bolt</option>
+          <option value="97">Black Canary</option>
+          <option value="98">Black Canary</option>
+          <option value="99">Black Cat</option>
+          <option value="100">Black Fash</option>
+          <option value="102">Black Knight III</option>
+          <option value="103">Black Lightning</option>
+          <option value="104">Black Mamba</option>
+          <option value="105">Black Manta</option>
+          <option value="106">Black Panther</option>
+          <option value="107">Black Widow</option>
+          <option value="109">Blackout</option>
+          <option value="110">Blackwing</option>
+          <option value="111">Blackwulf</option>
+          <option value="112">Blade</option>
+          <option value="114">Bling!</option>
+          <option value="115">Blink</option>
+          <option value="118">Blizzard II</option>
+          <option value="119">Blob</option>
+          <option value="120">Bloodaxe</option>
+          <option value="121">Bloodhawk</option>
+          <option value="126">Blue Beetle III</option>
+          <option value="127">Boba Fett</option>
+          <option value="136">Braniac</option>
+          <option value="142">Bumblebee</option>
+          <option value="145">Cable</option>
+          <option value="149">Captain America</option>
+          <option value="151">Captain Britain</option>
+          <option value="156">Captain Marvel</option>
+          <option value="160">Captain Planet</option>
+          <option value="162">Carnage</option>
+          <option value="165">Catwoman</option>
+          <option value="167">Century</option>
+          <option value="170">Chameleon</option>
+          <option value="172">Cheetah</option>
+          <option value="176">Chuck Norris</option>
+          <option value="185">Colossus</option>
+          <option value="194">Cyborg</option>
+          <option value="195">Cyborg Superman</option>
+          <option value="196">Cyclops</option>
+          <option value="201">Daredevil</option>
+          <option value="204">Darkseid</option>
+          <option value="207">Darth Maul</option>
+          <option value="208">Darth Vader</option>
+          <option value="213">Deadpool</option>
+          <option value="214">Deadshot</option>
+          <option value="216">Deathstroke</option>
+          <option value="222">Doctor Doom</option>
+          <option value="224">Doctor Fate</option>
+          <option value="225">Doctor Octopus</option>
+          <option value="226">Doctor Strange</option>
+          <option value="227">Domino</option>
+          <option value="230">Doomsday</option>
+          <option value="233">Dr. Manhattan</option>
+          <option value="234">Drax the Destroyer</option>
+          <option value="236">Elastigirl</option>
+          <option value="237">Electro</option>
+          <option value="238">Elektra</option>
+          <option value="239">Elle Bishop</option>
+          <option value="242">Enchantress</option>
+          <option value="245">Ethan Hunt</option>
+          <option value="247">Evil Deadpool</option>
+          <option value="251">Falcon</option>
+          <option value="263">Flash</option>
+          <option value="273">Galactus</option>
+          <option value="274">Gambit</option>
+          <option value="275">Gamora</option>
+          <option value="278">General Zod</option>
+          <option value="280">Ghost Rider</option>
+          <option value="298">Green Arrow</option>
+          <option value="299">Green Goblin</option>
+          <option value="303">Groot</option>
+          <option value="307">Han Solo</option>
+          <option value="309">Harley Quinn</option>
+          <option value="310">Harry Potter</option>
+          <option value="313">Hawkeye</option>
+          <option value="315">Hawkgirl</option>
+          <option value="317">Hawkwoman</option>
+          <option value="321">Hela</option>
+          <option value="322">Hellboy</option>
+          <option value="325">Hercules</option>
+          <option value="332">Hulk</option>
+          <option value="333">Human Torch</option>
+          <option value="339">Iceman</option>
+          <option value="341">Indiana Jones</option>
+          <option value="344">Invisible Woman</option>
+          <option value="345">Iron Fist</option>
+          <option value="346">Iron Man</option>
+          <option value="351">Jack-Jack</option>
+          <option value="352">James Bond</option>
+          <option value="354">Jar Jar Binks</option>
+          <option value="355">Jason Bourne</option>
+          <option value="356">Jean Grey</option>
+          <option value="361">Jessica Jones</option>
+          <option value="368">John Stewart</option>
+          <option value="370">Joker</option>
+          <option value="373">Judge Dredd</option>
+          <option value="374">Juggernaut</option>
+          <option value="379">Kang</option>
+          <option value="381">Katniss Everdeen</option>
+          <option value="382">Kevin 11</option>
+          <option value="383">Kick-Ass</option>
+          <option value="384">Kid Flash</option>
+          <option value="386">Killer Croc</option>
+          <option value="389">King Kong</option>
+          <option value="390">King Shark</option>
+          <option value="391">Kingpin</option>
+          <option value="393">Kool-Aid Man</option>
+          <option value="395">Kraven the Hunter</option>
+          <option value="398">Kylo Ren</option>
+          <option value="405">Lex Luthor</option>
+          <option value="410">Living Tribunal</option>
+          <option value="412">Lizard</option>
+          <option value="414">Loki</option>
+          <option value="416">Luke Cage</option>
+          <option value="418">Luke Skywalker</option>
+          <option value="423">Magneto</option>
+          <option value="428">Man-Thing</option>
+          <option value="430">Mandarin</option>
+          <option value="431">Mantis</option>
+          <option value="432">Martian Manhunter</option>
+          <option value="47">Astroboy</option>
         </select>
       </aside>
       <footer>This is a footer</footer>
