--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="app.js" defer></script>
-    <link rel="stylesheet" href="mobileStyle.css" />
     <link rel="stylesheet" href="styles.css" />
     <title>Project 1</title>
   </head>
@@ -19,71 +18,7 @@
       <nav>
         <h1>Super Hero API</h1>
       </nav>
-      <main>
-        <h3><span>Name:&nbsp;</span><span id="heroName"></span></h3>
-        <h3><span>ID:&nbsp;</span><span id="heroID"></span></h3>
-        <h3>
-          Biography:
-          <h4><span>Real Name:&nbsp;</span><span id="real-name"></span></h4>
-          <h4><span>Alter Ego(s):&nbsp;</span><span id="alter-ego"></span></h4>
-
-          <h4><span>Aliases:&nbsp;</span><span id="alias"></span></h4>
-
-          <h4>
-            <span>Place of Birth:&nbsp;</span><span id="birth-place"></span>
-          </h4>
-
-          <h4>
-            <span>First Appearance:&nbsp;</span><span id="appearance"></span>
-          </h4>
-
-          <h4><span>Publisher:&nbsp;</span><span id="publisher"></span></h4>
-
-          <h4><span>Alighnment:&nbsp;</span><span id="alignment"></span></h4>
-        </h3>
-
-        <h3>
-          Appearance:
-          <h4><span>Gender:&nbsp;</span><span id="gender"></span></h4>
-          <h4><span>Race:&nbsp;</span><span id="race"></span></h4>
-          <h4><span>Weight:&nbsp;</span><span id="weight"></span></h4>
-          <h4><span>Eye Color:&nbsp;</span><span id="eye-color"></span></h4>
-          <h4><span>Hair Color:&nbsp;</span><span id="hair-color"></span></h4>
-        </h3>
-
-        <h3>
-          Powerstats:
-          <h4>
-            <span>Intelligence:&nbsp;</span><span id="intelligence"></span>
-          </h4>
-          <div class="bar">
-            <div id="intelligenceProgress"></div>
-          </div>
-
-          <h4><span>Strength:&nbsp;</span><span id="strength"></span></h4>
-          <div class="bar">
-            <div id="strengthProgress"></div>
-          </div>
-          <h4><span>Speed:&nbsp;</span><span id="speed"></span></h4>
-          <div class="bar">
-            <div id="speedProgress"></div>
-          </div>
-          <h4><span>Durability:&nbsp;</span><span id="durability"></span></h4>
-          <div class="bar">
-            <div id="durabilityProgress"></div>
-          </div>
-          <h4><span>Power:&nbsp;</span><span id="power"></span></h4>
-          <div class="bar">
-            <div id="powerProgress"></div>
-          </div>
-          <h4><span>Combat:&nbsp;</span><span id="combat"></span></h4>
-          <div class="bar">
-            <div id="combatProgress"></div>
-          </div>
-        </h3>
-      </main>
-      <div id="hero-pic"></div>
-      <aside>
+      <section>
         <select id="herosDropDown">
           <option value="">- Please choose -</option>
           <option value="1">A-Bomb</option>
@@ -277,7 +212,67 @@
           <option value="432">Martian Manhunter</option>
           <option value="47">Astroboy</option>
         </select>
-      </aside>
+      </section>
+      <main>
+        <h3><span>Name:&nbsp;</span><span id="heroName"></span></h3>
+        <div id="mainNoName">
+          <h3><span>ID:&nbsp;</span><span id="heroID"></span></h3>
+          <h3>
+            Biography:
+            <h4><span>Real Name:&nbsp;</span><span id="real-name"></span></h4>
+            <h4>
+              <span>Alter Ego(s):&nbsp;</span><span id="alter-ego"></span>
+            </h4>
+            <h4><span>Aliases:&nbsp;</span><span id="alias"></span></h4>
+            <h4>
+              <span>Place of Birth:&nbsp;</span><span id="birth-place"></span>
+            </h4>
+            <h4>
+              <span>First Appearance:&nbsp;</span><span id="appearance"></span>
+            </h4>
+            <h4><span>Publisher:&nbsp;</span><span id="publisher"></span></h4>
+            <h4><span>Alighnment:&nbsp;</span><span id="alignment"></span></h4>
+          </h3>
+          <h3>
+            Appearance:
+            <h4><span>Gender:&nbsp;</span><span id="gender"></span></h4>
+            <h4><span>Race:&nbsp;</span><span id="race"></span></h4>
+            <h4><span>Weight:&nbsp;</span><span id="weight"></span></h4>
+            <h4><span>Eye Color:&nbsp;</span><span id="eye-color"></span></h4>
+            <h4><span>Hair Color:&nbsp;</span><span id="hair-color"></span></h4>
+          </h3>
+          <h3>
+            Powerstats:
+            <h4>
+              <span>Intelligence:&nbsp;</span><span id="intelligence"></span>
+            </h4>
+            <div class="bar">
+              <div id="intelligenceProgress"></div>
+            </div>
+            <h4><span>Strength:&nbsp;</span><span id="strength"></span></h4>
+            <div class="bar">
+              <div id="strengthProgress"></div>
+            </div>
+            <h4><span>Speed:&nbsp;</span><span id="speed"></span></h4>
+            <div class="bar">
+              <div id="speedProgress"></div>
+            </div>
+            <h4><span>Durability:&nbsp;</span><span id="durability"></span></h4>
+            <div class="bar">
+              <div id="durabilityProgress"></div>
+            </div>
+            <h4><span>Power:&nbsp;</span><span id="power"></span></h4>
+            <div class="bar">
+              <div id="powerProgress"></div>
+            </div>
+            <h4><span>Combat:&nbsp;</span><span id="combat"></span></h4>
+            <div class="bar">
+              <div id="combatProgress"></div>
+            </div>
+          </h3>
+        </div>
+      </main>
+      <div id="hero-pic"></div>
       <footer>This is a footer</footer>
     </div>
   </body>
