--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     ></script>
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Project 1</title>
+    <title>SBIA</title>
   </head>
   <div id="backgroundPhotos">
     <img
